app/assets/stylesheets/dashboard.scss
:root {
    --leaf-dashboard-card-border: #ddd
}

#leaf-dashboard {

    & .main-panel {
        margin: 0 auto;
        max-width: 1110px;

        & .welcome-panel {
            margin-bottom: 40px;
            width: 100%;

            & .avatar {
                margin-top: 20px;
                display: inline-block;
                vertical-align: middle;
                height: 90px;
                border-radius: 3600px;
            }

            & .inline-panel {
                display: inline-block;
                vertical-align: middle;
                margin-left: 40px;

                & .welcome-title {
                    font-family: var(--leaf-theme-font);
                    font-weight: 500;
                    font-size: 25px;
                    color: #444;
                    margin: 0;
                    padding-top: 20px;
                    flex-flow: row;
                }

                & .welcome-subtitle {
                    font-weight: 400;
                    font-family: var(--leaf-theme-font);
                    font-size: 20px;
                    color: #666;
                    margin: 0;
                }
            }
        }
    }
}

.dashboard-summary {
    margin: 0 auto;
}

.dashboard-card {
    margin: 10px auto;
    border-radius: 5px;
    box-shadow: none;
    border: 1px solid var(--leaf-dashboard-card-border);
    background: #fff;
    display: block;
    padding: 0;
    transition: box-shadow .2s;
    height: fit-content;
    max-width: calc(100vw - 75vw);


    & .text {
        font-family: var(--leaf-theme-font);
        font-size: var(--font-up-1);
        font-weight: 400;
        text-align: center;
        padding: 8px;
    }

    & .dashboard-card--item {
        cursor: pointer;
        border-top: 1px solid #DDD;
        padding: 10px;
        transition: background 0.2s;
        display: flex;
        font-family: var(--leaf-theme-font);

        & .inline-panel {
            display: inline-block;
            vertical-align: middle;
            margin-left: 20px;

            & .card-item-title {
                margin: 0;
                font-size: 18px;
                color: #444;
            }
            
            & .card-item-subtitle {
                margin: 0;
                color: #555;
                font-size: 14px;
            }
        }
    }


    & .icon-container {
        height: 50px;
        width: 50px;
        border-radius: 50px;
        margin: auto;
        margin-top: 20px;
        display: block;
        text-align: center;
        line-height: 3rem;
    }

    & .icon-container.system-info {
        background-color: #bee3f8;
        & i {
            color: #2b6cb0;
        }
    }

    & .icon-container.application-related {
        background-color: #e9d8fd;
        & i {
            color: #6b46c1;
        }
    }

    & .icon-container.app-templates {
        background-color: #c6f6d5;
        & i {
            color: #276749;
        }
    }
}

@media only screen and (max-width: 600px) {    
    #leaf-dashboard {    
        & .main-panel {
            & .welcome-panel {
    
                & .avatar {
                    display: block;
                    margin: 20px auto;
                }
    
                & .inline-panel {
                    display: block;
                    width: calc(100vw - 40px);
                    margin: 0 auto;
                    padding: 0 20px;
                    text-align: center;
                }
            }
        }
    }

    .dashboard-card {
        max-width: 95vw;
    }
}

